--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "countries-flags",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://artem26r.github.io/countries-spa",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +46,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.9.4"
   }
 }
